<!-- res/layout/activity_comparing_numbers.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/text_color"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/compare_numbers1" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="290dp"
        android:layout_below="@id/textNumbers"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="235dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGreater"
            android:layout_width="174dp"
            android:layout_height="158dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:onClick="onSymbolButtonClick"
            android:text="@string/more_than"
            android:textColor="@color/button_text_color"
            android:textSize="78dp" />

        <Button
            android:id="@+id/btnLess"
            android:layout_width="171dp"
            android:layout_height="162dp"
            android:background="@drawable/button_background"
            android:onClick="onSymbolButtonClick"
            android:text="@string/less_than"
            android:textColor="@color/button_text_color"
            android:textSize="78dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageMath"
        android:layout_width="395dp"
        android:layout_height="228dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/math2" />

</RelativeLayout>
